--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -43,10 +43,14 @@
                 flex-direction: column;
                 gap: 2rem;
                 list-style: none;
-                li{
-                    cursor: pointer;
-                    &:hover{
-                        color: $secondary
+                li {
+                    a {
+                        color: inherit;
+                        text-decoration: none;
+                    }
+    
+                    &:hover {
+                        color: $secondary;
                     }
                 }
             }
