--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -19,7 +19,7 @@
 
         .name {
             font-size: 1.5rem;
-            font-weight: 500;
+            font-weight: 800;
         }
 
         .menu {
@@ -45,6 +45,15 @@
                 padding: 3rem;
                 justify-content: flex-start;
                 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
+            }
+
+            @media (max-width:920px) {
+                font-size: 0.8rem;
+                gap: 0.8rem;
+            }
+            @media (max-width:768px) {
+                font-size: 1rem;
+                gap: 1.5rem;
             }
 
             text-transform: uppercase;
