--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -101,6 +101,8 @@
             top: 50%;
             left: 0;
             color: orange;
+            display: flex;
+            gap: 20px;
         }
     }
 }
