--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -103,10 +103,74 @@
   justify-items: end;
 }
 
+.flexBetween {
+  @media (max-width: $xsm) {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    padding: 5px;
+  }
+
+  display: flex;
+  justify-content: space-between;
+  padding: 40px;
+}
+
+.skillUl {
+  @media (max-width: $xsm) {
+    margin-top: 0px;
+    display: flex;
+    flex-direction: column;
+  }
+  gap: 20px;
+}
+
+
+.head {
+  @media (max-width: $xsm) {
+    display: flex;
+    justify-content: center;
+    
+  }
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.ulDesign {
+  @media (max-width: $xsm) {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+}
+
+.cssheading{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  line-height: 35px;
+
+}
+
+.skillItem {
+  @media (max-width: $xsm) {
+    padding: 0px;
+    // list-style: none;
+
+  }
+
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
 .primaryText {
   @media (max-width: $sm) {
     font-size: 2.5rem;
   }
+
   font-size: 3rem;
   font-weight: bold;
 }
@@ -116,10 +180,12 @@
     font-size: 1.1rem;
     line-height: 40px;
   }
+
   line-height: 50px;
   font-size: 1.3rem;
   font-weight: 500
 }
+
 .anchor {
   display: block;
   position: relative;
