--- a/src/components/Portfolio/Portfolio.module.scss
+++ b/src/components/Portfolio/Portfolio.module.scss
@@ -27,7 +27,7 @@
             justify-content: space-around;
             flex-wrap: wrap;
 
-            >img {
+            >a {
 
                 @media (max-width: $sm) {
                     width: 100%;
@@ -35,7 +35,7 @@
 
                 border-radius: 20px;
                 max-width: 25rem;
-                max-height: 18rem;
+                max-height: 20rem;
                 box-shadow: 0px 21px 13px rgba(0, 0, 0, 13%);
                 cursor: pointer;
             }
