--- a/src/components/Works/Works.module.scss
+++ b/src/components/Works/Works.module.scss
@@ -8,7 +8,7 @@
         .experiences {
             width: 100%;
             flex-direction: column;
-            gap: 1.4rem;
+            gap: 1.5rem;
             position: relative;
 
             .exp {
@@ -24,6 +24,10 @@
                 .role {
                     margin-left: 2rem;
                 }
+
+                .tenure {
+                    margin-left: 16px;
+                }
             }
 
             .progressbar {
@@ -31,25 +35,25 @@
                 height: 100%;
                 display: flex;
                 flex-direction: column;
-                gap: 1.4rem;
+                gap: 9.4rem;
                 left: 45%;
 
                 .line {
                     position: absolute;
-                    height: 92%;
+                    height: 99%;
                     width: 2px;
                     background-image: linear-gradient(black 33%, rgba(255, 255, 255, 0) 0%);
                     background-position: right;
                     background-size: 2px 30px;
                     background-repeat: repeat-y;
-                    left: 48%;
+                    left: 44%;
                     z-index: 1;
                     border-radius: 5px;
                 }
 
                 >div {
                     flex: 1;
-                    padding-top: .8rem;
+                    // padding-top: .4rem;
                     z-index: 2;
 
                     .circle {
@@ -60,7 +64,20 @@
                     }
                 }
             }
-        }
 
+            .progressbar {
+                @media (max-width: $sm) {
+                    display: none;
+                }
+
+            }
+
+            .tenure {
+                @media (max-width: $sm) {
+                    margin-left: 0px !important;
+                    margin-top: 1rem !important;
+                }
+            }
+        }
     }
 }
